:lipstick: :wrench: Use ResizeObserver, fix overflows

--- a/kmfrontend/src/frontend/KMFrontend.scss
+++ b/kmfrontend/src/frontend/KMFrontend.scss
@@ -9,6 +9,7 @@ body {
 	&.forceScroll {
 		overflow-y: scroll;
 	}
+	overflow-y: hidden;
 }
 
 // Our stylesheet
